Fix compact alignment for short note outlines

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1518,6 +1518,8 @@ li {
 
 .note-outline-list {
   display: grid;
+  align-content: start;
+  grid-auto-rows: max-content;
   gap: 0;
   height: 100%;
   max-height: none;
@@ -1544,7 +1546,9 @@ li {
 }
 
 .note-outline-item {
+  align-self: start;
   margin: 0;
+  min-height: 0;
 }
 
 .note-outline-item + .note-outline-item.is-depth-2 {
